# lit-checker

./: .copier-answers.yml  .gitignore  README.md  log.txt  log.txt.2024-07-19_13-57-02  log.txt.2024-07-19_13-57-08  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
configs/c100/: config_c100.yaml
docs/: mkdocs.yaml
run/: run.py  test.ipynb  test.py  test_audio.py  test_data_ann.ipynb  test_thr.py
src/lit_checker/: args.py  logging.py
src/lit_checker/camera/: args.py  background_image_processor.py  base_camera.py  camera_processor.py  exceptions.py  foreground_image_processor.py
src/lit_checker/camera/c100/: args.py  c100_camera.py
src/lit_checker/drive/: args.py  google_drive_uploader.py
src/lit_checker/mail/: args.py  mail_service.py
src/lit_checker/motion_detection/: args.py  background_image_processor.py  foreground_image_processor.py  motion_detector.py
tests/: test_init_camera.py
