[tool.poetry]
name = "lit-checker"
version = "0.1.0"
description = "computer vision experiment"
authors = ["catalinnega <none@gmail.com>"]
readme = "README.md"
repository = "https://github.com/catalinnega/lit-checker"
packages = [{ include = "lit_checker", from = "src" }]
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"
numpy = "^2.0.0"
opencv-python-headless = "^4.10.0.84"
labelme = "^5.5.0"
video-cli = "^1.3.3"

[tool.poetry.group.dev.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"
taskipy = "*"

[tool.taskipy.tasks]
clean = { cmd = "rm -rf .mypy_cache/ .pytest_cache/ build/ dist/ *.egg-info", help = "Remove build artifacts" }
docs = { cmd = "mkdocs serve -f docs/mkdocs.yaml", help = "Serve documentation"}
lint = { cmd = "pre-commit run --all-files", help = "Run linters and formatters" }
test = { cmd = "pytest", help = "Run tests" }

[tool.ruff]
line-length = 99
fix = true

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
